--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-portfolio",
   "version": "0.1.0",
-  "homepage": "https://roshan-77.github.io/react-portfolio",
+  "homepage": "https://roshan-77.github.io/react-portfolio/",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
